--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -562,7 +562,7 @@
     <value>可以使用命令 ASFEUPDATE / AU 自动更新插件</value>
   </data>
   <data name="AlreadyLatest" xml:space="preserve">
-    <value>当前已经是最新版本, 无需更新插件</value>
+    <value>插件已经是最新版本, 无需更新</value>
   </data>
   <data name="DownloadFailed" xml:space="preserve">
     <value>下载插件失败!</value>
@@ -1088,5 +1088,95 @@
   </data>
   <data name="CommandDisabled" xml:space="preserve">
     <value>命令 {0} 被禁用!</value>
+  </data>
+  <data name="CanUpdate" xml:space="preserve">
+    <value>*可更新*</value>
+  </data>
+  <data name="SubModuleLoadedModules" xml:space="preserve">
+    <value>已加载 {0} 个外部模块</value>
+  </data>
+  <data name="SubModuleListItem" xml:space="preserve">
+    <value>{0}: [{1,-3}] {2,-25} {3}</value>
+  </data>
+  <data name="SubModuleNoModule" xml:space="preserve">
+    <value>未加载外部模块</value>
+  </data>
+  <data name="SubModulePluginVersion" xml:space="preserve">
+    <value>使用 "PLUGINVERSION [插件名]" / "PV [插件名]" 检查插件可用更新</value>
+  </data>
+  <data name="SubModulePluginUpdate" xml:space="preserve">
+    <value>使用 "PLUGINUPDATE [插件名]" / "PU [插件名]"  自动更新指定插件</value>
+  </data>
+  <data name="SubModuleCmdTips" xml:space="preserve">
+    <value>不指定插件名时, 可为所有支持的插件检查更新 / 安装更新</value>
+  </data>
+  <data name="SubModuleDeleteOldPluginSuccess" xml:space="preserve">
+    <value>删除旧版插件备份成功 {0}</value>
+  </data>
+  <data name="SubModuleDeleteOldPluginFailed" xml:space="preserve">
+    <value>删除旧版插件备份失败 {0}</value>
+  </data>
+  <data name="UpdateFailedPluginNotFound" xml:space="preserve">
+    <value>获取版本信息失败, 未找到插件 {0}</value>
+  </data>
+  <data name="UpdatePluginUpdateInfo" xml:space="preserve">
+    <value>插件更新信息:</value>
+  </data>
+  <data name="UpdatePluginListItemName" xml:space="preserve">
+    <value>插件名称: {0} {1}</value>
+  </data>
+  <data name="UpdatePluginListItemVersion" xml:space="preserve">
+    <value>当前版本: {0} 在线版本: {1}</value>
+  </data>
+  <data name="UpdatePluginListItemStatus" xml:space="preserve">
+    <value>更新状态: {0}</value>
+  </data>
+  <data name="UpdatePluginListItemReleaseNote" xml:space="preserve">
+    <value>版本说明: \n{0}</value>
+  </data>
+  <data name="UpdatePluginVersionTips" xml:space="preserve">
+    <value>使用命令 PLUGINUPDATE [插件名] 自动更新指定插件, 省略插件名时可更新全部支持的插件</value>
+  </data>
+  <data name="UpdatePluginListItemUpdateTips" xml:space="preserve">
+    <value>更新插件完成, 重启 ASF 后生效</value>
+  </data>
+  <data name="PluginListTips" xml:space="preserve">
+    <value>已安装 {0} 个外部模块, 末尾带 [] 的为 ASFEnhance 和子模块</value>
+  </data>
+  <data name="PluginListItem" xml:space="preserve">
+    <value>{0}: {1,-20} {2} [{3,-}]</value>
+  </data>
+  <data name="PluginListItem2" xml:space="preserve">
+    <value>{0}: {1,-20} {2}</value>
+  </data>
+  <data name="PluginUpdateNotSupport" xml:space="preserve">
+    <value>插件不支持在线更新</value>
+  </data>
+  <data name="GetReleaseInfoFailedNetworkError" xml:space="preserve">
+    <value>网络错误, 无法获取发行版信息</value>
+  </data>
+  <data name="VersionHigher" xml:space="preserve">
+    <value>当前版本号更高, 无需更新</value>
+  </data>
+  <data name="NoAssetFoundInReleaseInfo" xml:space="preserve">
+    <value>该发行版没有可下载的文件</value>
+  </data>
+  <data name="DownloadPluginFailed" xml:space="preserve">
+    <value>下载插件失败</value>
+  </data>
+  <data name="DownloadFailedFileConflict" xml:space="preserve">
+    <value>下载插件失败, 存在文件冲突, 请尝试重启 ASF 后再尝试更新</value>
+  </data>
+  <data name="DownloadPluginSuccess" xml:space="preserve">
+    <value>更新插件成功</value>
+  </data>
+  <data name="DownloadPluginFailedUnzipError" xml:space="preserve">
+    <value>更新插件失败, 解压缩遇到错误</value>
+  </data>
+  <data name="SubModuleRegisterFailedLog" xml:space="preserve">
+    <value>子模块 {0} 注册失败, 重复的 ID {1}</value>
+  </data>
+  <data name="SubModuleRegisterFailed" xml:space="preserve">
+    <value>子模块注册失败, 重复的ID</value>
   </data>
 </root>
