--- a/ASFEnhance/Localization/Langs.ru-RU.resx
+++ b/ASFEnhance/Localization/Langs.ru-RU.resx
@@ -525,15 +525,6 @@
   <data name="ASFECurrentVersion" xml:space="preserve">
     <value>Текущая версия: {0}</value>
   </data>
-  <data name="ASFEOnlineVersion" xml:space="preserve">
-    <value>Последняя версия: {0}</value>
-  </data>
-  <data name="ASFEPluginVersion" xml:space="preserve">
-    <value> - Подключенная версия: {0}</value>
-  </data>
-  <data name="Assert" xml:space="preserve">
-    <value> - Assets: </value>
-  </data>
   <data name="CommandHelp" xml:space="preserve">
     <value>Доступные команды:</value>
   </data>
@@ -552,23 +543,11 @@
   <data name="SubLink" xml:space="preserve">
     <value>   - Ссылка: {0}</value>
   </data>
-  <data name="SubSize" xml:space="preserve">
-    <value>   - Размер: {0:0.000} KB</value>
-  </data>
-  <data name="SubName" xml:space="preserve">
-    <value>   - Название: {0}</value>
-  </data>
-  <data name="UpdateSuccess" xml:space="preserve">
-    <value>Обновление плагина завершено, перезапустите ASF, чтобы применить обновление, если оно несовместимо, пожалуйста, также обновите ASF</value>
-  </data>
   <data name="UpdateFiledWithZip" xml:space="preserve">
     <value>Ошибка обновления плагина - не удалось распаковать архив</value>
   </data>
   <data name="Version" xml:space="preserve">
     <value> - Версия: {0}</value>
-  </data>
-  <data name="UpdateTips" xml:space="preserve">
-    <value>Используй команду "ASFEUPDATE" / "AU" для обновления плагина</value>
   </data>
   <data name="AlreadyLatest" xml:space="preserve">
     <value>Плагин уже обновлен, нет необходимости в обновлении</value>
@@ -590,12 +569,6 @@
   </data>
   <data name="EventTaskComplete" xml:space="preserve">
     <value>Задача события Steam завершена</value>
-  </data>
-  <data name="ASFEUpdateTips" xml:space="preserve">
-    <value>Используй команду "ASFEUPDATE" / "AU" для обновления плагина</value>
-  </data>
-  <data name="ASFEVersionTips" xml:space="preserve">
-    <value>Используй команду "ASFEVERSION" / "AV" чтобы проверить последнюю версию плагина</value>
   </data>
   <data name="DeleteReview" xml:space="preserve">
     <value>Удалить отзыв о {0} : </value>
@@ -1088,5 +1061,92 @@
   </data>
   <data name="CommandDisabled" xml:space="preserve">
     <value>Command {0} is disabled!</value>
+  </data>
+  <data name="PluginListItem" xml:space="preserve">
+    <value>{0}: {1,-25} {2} [{3}]</value>
+  </data>
+  <data name="PluginListItem2" xml:space="preserve">
+    <value>{0}: {1,-20} {2}</value>
+  </data>
+  <data name="PluginListTips" xml:space="preserve">
+    <value>已安装 {0} 个外部模块, 末尾带 [] 的为 ASFEnhance 和子模块</value>
+  </data>
+  <data name="PluginUpdateNotSupport" xml:space="preserve">
+    <value>插件不支持在线更新</value>
+  </data>
+  <data name="SubModuleCmdTips" xml:space="preserve">
+    <value>不指定插件名时, 可为所有支持的插件检查更新 / 安装更新</value>
+  </data>
+  <data name="SubModuleDeleteOldPluginFailed" xml:space="preserve">
+    <value>删除旧版插件备份失败 {0}</value>
+  </data>
+  <data name="SubModuleDeleteOldPluginSuccess" xml:space="preserve">
+    <value>删除旧版插件备份失败 {0}</value>
+  </data>
+  <data name="SubModuleListItem" xml:space="preserve">
+    <value>{0}: [{1,-3}] {2,-25} {3}</value>
+  </data>
+  <data name="SubModuleLoadedModules" xml:space="preserve">
+    <value>已加载 {0} 个外部模块</value>
+  </data>
+  <data name="UpdateFailedPluginNotFound" xml:space="preserve">
+    <value>获取版本信息失败, 未找到插件 {0}</value>
+  </data>
+  <data name="UpdatePluginListItemName" xml:space="preserve">
+    <value>插件名称: {0} {1}</value>
+  </data>
+  <data name="UpdatePluginListItemStatus" xml:space="preserve">
+    <value>更新状态: {0}</value>
+  </data>
+  <data name="UpdatePluginListItemUpdateTips" xml:space="preserve">
+    <value>更新插件完成, 重启 ASF 后生效, 如果不兼容请更新 ASF 版本</value>
+  </data>
+  <data name="UpdatePluginListItemVersion" xml:space="preserve">
+    <value>当前版本: {0} 在线版本: {1}</value>
+  </data>
+  <data name="UpdatePluginListItemReleaseNote" xml:space="preserve">
+    <value>版本说明: \n{0}</value>
+  </data>
+  <data name="VersionHigher" xml:space="preserve">
+    <value>当前版本号更高, 无需更新</value>
+  </data>
+  <data name="UpdatePluginUpdateInfo" xml:space="preserve">
+    <value>插件更新信息:</value>
+  </data>
+  <data name="UpdatePluginVersionTips" xml:space="preserve">
+    <value>使用命令 PLUGINUPDATE [插件名] 自动更新指定插件, 省略插件名时可更新全部支持的插件</value>
+  </data>
+  <data name="SubModulePluginUpdate" xml:space="preserve">
+    <value>使用 "PLUGINUPDATE [插件名]" / "PU [插件名]"  自动更新指定插件</value>
+  </data>
+  <data name="SubModuleNoModule" xml:space="preserve">
+    <value>未加载外部模块</value>
+  </data>
+  <data name="SubModulePluginVersion" xml:space="preserve">
+    <value>使用 "PLUGINVERSION [插件名]" / "PV [插件名]" 检查插件可用更新</value>
+  </data>
+  <data name="SubModuleRegisterFailed" xml:space="preserve">
+    <value>子模块注册失败, 重复的ID</value>
+  </data>
+  <data name="SubModuleRegisterFailedLog" xml:space="preserve">
+    <value>子模块 {0} 注册失败, 重复的 ID {1}</value>
+  </data>
+  <data name="ASFUpdateTips" xml:space="preserve">
+    <value>ASFEUPDATE 和 ASFEVERSION 已经被弃用, 请使用 PLUGINUPDATE 和 PLUGINVERSION, 使用方法参考文档</value>
+  </data>
+  <data name="CanUpdate" xml:space="preserve">
+    <value>*可更新*</value>
+  </data>
+  <data name="DownloadFailedFileConflict" xml:space="preserve">
+    <value>下载插件失败, 存在文件冲突, 请尝试重启 ASF 后再尝试更新</value>
+  </data>
+  <data name="DownloadPluginFailedUnzipError" xml:space="preserve">
+    <value>更新插件失败, 解压缩遇到错误</value>
+  </data>
+  <data name="DownloadPluginFailed" xml:space="preserve">
+    <value>下载插件失败</value>
+  </data>
+  <data name="DownloadPluginSuccess" xml:space="preserve">
+    <value>更新插件成功</value>
   </data>
 </root>
