--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -1170,4 +1170,10 @@
   <data name="NoBanRecords" xml:space="preserve">
     <value>无封禁信息</value>
   </data>
+  <data name="ExistsApiKey" xml:space="preserve">
+    <value>存在ApiKey</value>
+  </data>
+  <data name="NoExistsApiKey" xml:space="preserve">
+    <value>不存在/已吊销ApiKey</value>
+  </data>
 </root>
