--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -1479,4 +1479,7 @@
   <data name="DiscoveryQueueExploreredSuccess" xml:space="preserve">
     <value>探索队列浏览完毕</value>
   </data>
+  <data name="AccessTokenIsNullWarnMessage" xml:space="preserve">
+    <value>Bot {0} 的 AccessToken 为 null, 请稍后重试</value>
+  </data>
 </root>
