--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -1494,4 +1494,13 @@
   <data name="WalletCodeRedeemFailed" xml:space="preserve">
     <value>充值码激活失败, 代码 {0}</value>
   </data>
+  <data name="InvalidThemeName" xml:space="preserve">
+    <value>themeName 无效, 仅可为 *, summer, midnight, steel, cosmic, darkmode</value>
+  </data>
+  <data name="ClearThemeResult" xml:space="preserve">
+    <value>清除个人资料主题 {0}</value>
+  </data>
+  <data name="SetThemeResult" xml:space="preserve">
+    <value>设置个人资料主题为 {0} {1}</value>
+  </data>
 </root>
