--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -1536,4 +1536,19 @@
   <data name="FamilyGroupIdItem" xml:space="preserve">
     <value>Id: {0}</value>
   </data>
+  <data name="FamilyGroupMemberItem" xml:space="preserve">
+    <value>成员数量: {0}</value>
+  </data>
+  <data name="FamilyGroupNameEditFailedIdInvalid" xml:space="preserve">
+    <value>修改失败, 家庭组 Id 无效</value>
+  </data>
+  <data name="FamilyGroupNameEditFailedNotJoined" xml:space="preserve">
+    <value>修改失败, 未加入家庭组</value>
+  </data>
+  <data name="FamilyGroupNameEditSuccess" xml:space="preserve">
+    <value>修改家庭组名称成功</value>
+  </data>
+  <data name="FamilyGroupNotJoined" xml:space="preserve">
+    <value>未加入家庭组</value>
+  </data>
 </root>
